--- a/src/main.scss
+++ b/src/main.scss
@@ -1,14 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@use 'css/colors';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
-$font-size: 1rem;
-$font-color: lch(28 99 35);
-$font-color: lightcoral;
+$font-size: 1px;
 
-html {
-  font-family: "Roboto", sans-serif;
-  font-size: $font-size;
-  color: $font-color;
+* {
+  box-sizing: border-box;
 }
 
+html, body {
+  font-size: 1px;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  background: var(--md-sys-color-background);
+
+}
+
+menu {
+  padding: 12px;
+  border-radius: 16px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  background: var(--md-sys-color-surface);
+  max-width: 360px;
+
+  .group {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 56px;
+    border-bottom: 1px solid var(--md-sys-color-outline-variant);
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  .item {
+    font-size: 14rem;
+    font-weight: 500;
+    line-height: 20rem;
+    letter-spacing: 0.1rem;
+    color: var(--md-sys-color-on-secondary-container);
+    padding: 0 16px;
+
+    display: grid;
+    align-items: center;
+    position: relative;
+
+    grid-template-columns: 24px 1fr minmax(24px, min-content);
+    gap: 12px;
+
+
+    &--active, &:active {
+      font-weight: 700;
+
+      &::after {
+        content: '';
+        position: absolute;
+        background: var(--md-sys-color-on-secondary-container);
+        opacity: .1;
+        inset: 0;
+        border-radius: 28px;
+
+      }
+    }
+
+    &--headline {
+      color: var(--md-sys-color-on-surface-variant);
+    }
+
+    &__icon {
+      font-size: 24rem;
+    }
+
+    &__count {
+
+    }
+
+  }
+}
 
