--- a/src/main.scss
+++ b/src/main.scss
@@ -1,19 +1,26 @@
 @use 'css/colors';
+@use 'css/typography';
+@use 'css/mixins';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
 $font-size: 1px;
+$breakpoint-small: 480px;
+$breakpoint-medium: 800px;
+
+$menu-max-width: 360px;
+$menu-medium-width: 80px;
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html, body {
   font-size: 1px;
   font-family: "Roboto", sans-serif;
-  margin: 0;
   background: var(--md-sys-color-background);
-
 }
 
 menu {
@@ -22,14 +29,24 @@ menu {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
+  gap: 12px;
   background: var(--md-sys-color-surface);
-  max-width: 360px;
+  max-width: $menu-max-width;
+  @media ($breakpoint-small < width <= $breakpoint-medium) {
+    max-width: $menu-medium-width;
+    padding: 12px 0;
+  }
 
   .group {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 56px;
     border-bottom: 1px solid var(--md-sys-color-outline-variant);
+    padding-bottom: 8px;
+    @media ($breakpoint-small < width <= $breakpoint-medium) {
+      grid-auto-rows: min-content;
+      gap: 12px;
+    }
 
     &:last-child {
       border-bottom: none;
@@ -37,45 +54,106 @@ menu {
   }
 
   .item {
-    font-size: 14rem;
-    font-weight: 500;
-    line-height: 20rem;
-    letter-spacing: 0.1rem;
+    @include typography.text-label;
     color: var(--md-sys-color-on-secondary-container);
     padding: 0 16px;
+    isolation: isolate;
 
     display: grid;
     align-items: center;
     position: relative;
 
-    grid-template-columns: 24px 1fr minmax(24px, min-content);
+    --_grid-template-columns: 24px 1fr minmax(32px, min-content);
+    grid-template-columns: var(--_grid-template-columns);
     gap: 12px;
 
+    --content-indicator: none;
+    --backgroundcolor-indicator: tranparent;
+    --opacity-indicator: 1;
 
-    &--active, &:active {
-      font-weight: 700;
+    @media ($breakpoint-small < width <= $breakpoint-medium) {
+      grid-template-columns: 1fr;
+      display: grid;
+      justify-items: center;
+      padding: 0;
+      gap: 4px;
+    }
 
-      &::after {
-        content: '';
-        position: absolute;
-        background: var(--md-sys-color-on-secondary-container);
-        opacity: .1;
-        inset: 0;
-        border-radius: 28px;
+    &::after {
+      @include mixins.active-indicator();
+      content: var(--content-indicator);
+      background: var(--backgroundcolor-indicator);
+      opacity: var(--opacity-indicator);
 
+      @media ($breakpoint-small < width <= $breakpoint-medium) {
+        --_width: 64px;
+        top: 0;
+        left: calc(($menu-medium-width - var(--_width)) / 2);
+        width: var(--_width);
+        height: 32px;
       }
     }
 
-    &--headline {
-      color: var(--md-sys-color-on-surface-variant);
+    &:hover {
+      cursor: pointer;
+      --content-indicator: '';
+      --backgroundcolor-indicator: var(--md-sys-color-on-secondary-container);
+      --opacity-indicator: 0.08;
+      --icon-fill: 1;
     }
+
+    &--active, &:active {
+      font-weight: 700;
+      --content-indicator: '';
+      --backgroundcolor-indicator: var(--md-sys-color-secondary-container);
+      --opacity-indicator: 0.9;
+      --icon-fill: 1;
+
+      &:hover {
+        --backgroundcolor-indicator: var(--md-sys-color-secondary-container);
+        --opacity-indicator: 1;
+      }
+    }
+
+
+    &--headline {
+      @include typography.text-headline;
+      color: var(--md-sys-color-on-surface-variant);
+
+      &::after {
+        content: none;
+      }
+
+      &:hover {
+        cursor: auto;
+      }
+
+      @media ($breakpoint-small < width <= $breakpoint-medium) {
+        display: none;
+      }
+    }
+
 
     &__icon {
       font-size: 24rem;
+
+      font-variation-settings: 'FILL' var(--icon-fill, 0), 'wght' 400, 'GRAD' 0, 'opsz' 24;
+      transition: font-variation-settings .3s;
+
+      @media ($breakpoint-small < width <= $breakpoint-medium) {
+        justify-content: center;
+        margin: 4px;
+      }
+
+
     }
 
     &__count {
-
+      display: grid;
+      justify-content: center;
+      @media ($breakpoint-small < width <= $breakpoint-medium) {
+        display: none;
+      }
     }
 
   }
