--- a/src/main.scss
+++ b/src/main.scss
@@ -5,9 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
 $font-size: 1px;
+$base-gap: 12px;
 $breakpoint-small: 480px;
 $breakpoint-medium: 800px;
-
+$menu-min-width: 240px;
 $menu-max-width: 360px;
 $menu-medium-width: 80px;
 
@@ -20,21 +21,35 @@ $menu-medium-width: 80px;
 html, body {
   font-size: 1px;
   font-family: "Roboto", sans-serif;
-  background: var(--md-sys-color-background);
+  background: var(--md-sys-color-surface-variant);
+  min-width: $menu-min-width;
 }
 
 menu {
-  padding: 12px;
+  padding: $base-gap;
   border-radius: 16px;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
-  gap: 12px;
+  gap: $base-gap;
   background: var(--md-sys-color-surface);
   max-width: $menu-max-width;
   @media ($breakpoint-small < width <= $breakpoint-medium) {
     max-width: $menu-medium-width;
-    padding: 12px 0;
+    padding: $base-gap 0;
+    border-radius: 0;
+  }
+
+  @media (width <= $breakpoint-small) {
+    max-width: inherit;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    height: min-content;
+    grid-auto-flow: column;
+    border-radius: 0;
+    padding: $base-gap 0 0 0;
+    min-width: $menu-min-width;
   }
 
   .group {
@@ -45,11 +60,23 @@ menu {
     padding-bottom: 8px;
     @media ($breakpoint-small < width <= $breakpoint-medium) {
       grid-auto-rows: min-content;
-      gap: 12px;
+      gap: $base-gap;
     }
 
     &:last-child {
       border-bottom: none;
+    }
+
+    @media (width <= $breakpoint-small) {
+      display: none;
+      grid-auto-flow: column;
+      grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+      border-bottom: none;
+      padding-bottom: 8px;
+
+      &:first-child {
+        display: grid;
+      }
     }
   }
 
@@ -65,13 +92,13 @@ menu {
 
     --_grid-template-columns: 24px 1fr minmax(32px, min-content);
     grid-template-columns: var(--_grid-template-columns);
-    gap: 12px;
+    gap: $base-gap;
 
     --content-indicator: none;
     --backgroundcolor-indicator: tranparent;
     --opacity-indicator: 1;
 
-    @media ($breakpoint-small < width <= $breakpoint-medium) {
+    @media (width <= $breakpoint-medium) {
       grid-template-columns: 1fr;
       display: grid;
       justify-items: center;
@@ -85,11 +112,11 @@ menu {
       background: var(--backgroundcolor-indicator);
       opacity: var(--opacity-indicator);
 
-      @media ($breakpoint-small < width <= $breakpoint-medium) {
-        --_width: 64px;
+      @media (width <= $breakpoint-medium) {
         top: 0;
-        left: calc(($menu-medium-width - var(--_width)) / 2);
-        width: var(--_width);
+        left: 50%;
+        transform: translate(-50%);
+        width: 64px;
         height: 32px;
       }
     }
@@ -128,7 +155,7 @@ menu {
         cursor: auto;
       }
 
-      @media ($breakpoint-small < width <= $breakpoint-medium) {
+      @media (width <= $breakpoint-medium) {
         display: none;
       }
     }
@@ -140,18 +167,16 @@ menu {
       font-variation-settings: 'FILL' var(--icon-fill, 0), 'wght' 400, 'GRAD' 0, 'opsz' 24;
       transition: font-variation-settings .3s;
 
-      @media ($breakpoint-small < width <= $breakpoint-medium) {
+      @media (width <= $breakpoint-medium) {
         justify-content: center;
         margin: 4px;
       }
-
-
     }
 
     &__count {
       display: grid;
       justify-content: center;
-      @media ($breakpoint-small < width <= $breakpoint-medium) {
+      @media (width <= $breakpoint-medium) {
         display: none;
       }
     }
